default password popup

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ee9f1b; }
+  background: #5d79e4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #281886; }
+  background: #8f983a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #95246d; }
+  background: #f486a5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #86b56f; }
+  background: #f1cd8e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e58b99; }
+  background: #e0d0e9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #84f417; }
+  background: #add4fd; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #56571c; }
+  background: #f8c03a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #979e8c; }
+  background: #52b9be; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c85b3b; }
+  background: #c2a368; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #42c6de; }
+  background: #40723d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #293c3e; }
+  background: #1bdf96; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0836cf; }
+  background: #56b330; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5df328; }
+  background: #984da0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #44102b; }
+  background: #d738da; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cee536; }
+  background: #35c8aa; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b4901f; }
+  background: #7cd4d4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c62e96; }
+  background: #015c99; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b1f15b; }
+  background: #913afb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #655cd1; }
+  background: #d7f684; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3875a7; }
+  background: #f4d171; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f4a726; }
+  background: #a5d8d2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a4c5cd; }
+  background: #f72525; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4677aa; }
+  background: #9a1c60; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5aa56e; }
+  background: #d82c15; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8bf1b5; }
+  background: #aad9db; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0ed10a; }
+  background: #529299; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #39143c; }
+  background: #d462bb; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c9a946; }
+  background: #ee7781; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bd34ab; }
+  background: #523abb; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7c60bb; }
+  background: #a86ad9; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #05fb67; }
+  background: #adff29; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fbfead; }
+  background: #d37d90; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2e9087; }
+  background: #1f6569; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4a8748; }
+  background: #f1803c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3fe719; }
+  background: #f808d2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e3cd42; }
+  background: #2964fb; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #42993d; }
+  background: #ae677f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8078dc; }
+  background: #670eb6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #49b8ff; }
+  background: #09a994; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fb7075; }
+  background: #46aae0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #673c52; }
+  background: #b063e9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d4fd72; }
+  background: #3cc1ca; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #310bc6; }
+  background: #1f0943; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b8f9b4; }
+  background: #286b9a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5c1c36; }
+  background: #9ab0a3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #971602; }
+  background: #e70bae; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #64f4b0; }
+  background: #d10a8f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4505df; }
+  background: #b5d486; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ba3bd4; }
+  background: #a1694a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8c7f9c; }
+  background: #aa4955; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #940df5; }
+  background: #dcdb30; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c1a8b4; }
+  background: #935954; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #993b23; }
+  background: #7f2ceb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9737c5; }
+  background: #318cb5; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7a3599; }
+  background: #bf8055; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9d9b41; }
+  background: #a6f58d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4f1c17; }
+  background: #6d4449; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #450fe6; }
+  background: #c430a8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7e5e39; }
+  background: #f4bd22; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9bf620; }
+  background: #f13927; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #eef2c0; }
+  background: #5e896a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #cc3fe9; }
+  background: #dcb1ec; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a9c18c; }
+  background: #3af866; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #15894f; }
+  background: #822529; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #88b8de; }
+  background: #ecbb1d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #77b174; }
+  background: #66c30b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #53df87; }
+  background: #03268c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #864c1f; }
+  background: #72b94c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #919df1; }
+  background: #8eec39; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #fd1b77; }
+  background: #961896; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #584128; }
+  background: #c33e7e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #faa193; }
+  background: #9f7f81; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e27692; }
+  background: #43c433; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9313ed; }
+  background: #4796f6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6662d6; }
+  background: #433127; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #547331; }
+  background: #7db180; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d9fcff; }
+  background: #e1ef53; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6b96b5; }
+  background: #8fee16; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #78b3ec; }
+  background: #0819bc; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #92ce8c; }
+  background: #fdda4b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #73ca3f; }
+  background: #36fe72; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fce464; }
+  background: #a8874f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4aec11; }
+  background: #406541; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #861d3f; }
+  background: #6050a4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #fddb2e; }
+  background: #1439ea; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ef76fe; }
+  background: #42ee84; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f54862; }
+  background: #45e197; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0a08c7; }
+  background: #7f28ce; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #12c228; }
+  background: #6fa587; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #263f1d; }
+  background: #f8cce7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #248243; }
+  background: #7c6846; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6880ee; }
+  background: #b20501; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4e7234; }
+  background: #c0a1a7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5af224; }
+  background: #d029d6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9e0109; }
+  background: #e717d4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9beca7; }
+  background: #24adbc; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fc9672; }
+  background: #5e5b97; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #05b2e8; }
+  background: #1b8f02; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8027f7; }
+  background: #a03d46; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3e90d4; }
+  background: #c29031; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14864,6 +14864,23 @@ option {
 .form-control:disabled,
 .form-control[readonly] {
   background-color: #d7d7d7 !important; }
+
+.default-password-modal-bottom-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .default-password-modal-bottom-row .checkbox-with-text-row .label-div {
+    margin-bottom: 0px; }
+
+.note-alert-mesg {
+  padding: 10px;
+  color: #776FFF;
+  border: 1px solid #776FFF;
+  margin-bottom: 25px;
+  letter-spacing: 1px; }
+  .note-alert-mesg .alert-heading {
+    font-size: 22px;
+    margin-bottom: 5px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
