--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5d79e4; }
+  background: #eb0f38; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8f983a; }
+  background: #733649; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f486a5; }
+  background: #f9a99d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f1cd8e; }
+  background: #55b112; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e0d0e9; }
+  background: #9616eb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #add4fd; }
+  background: #6b9843; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f8c03a; }
+  background: #643dfa; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #52b9be; }
+  background: #3b6b93; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c2a368; }
+  background: #fc76c6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #40723d; }
+  background: #0c6aea; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1bdf96; }
+  background: #6c9e16; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #56b330; }
+  background: #5611ac; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #984da0; }
+  background: #16825c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d738da; }
+  background: #91e9b2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #35c8aa; }
+  background: #5fa4fb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7cd4d4; }
+  background: #9fd4de; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #015c99; }
+  background: #b8895c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #913afb; }
+  background: #1d7433; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d7f684; }
+  background: #2dd742; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f4d171; }
+  background: #4f1c12; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a5d8d2; }
+  background: #6554c1; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f72525; }
+  background: #5b86a6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9a1c60; }
+  background: #9e358c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d82c15; }
+  background: #aaabfc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #aad9db; }
+  background: #70fe3e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #529299; }
+  background: #f5b8f3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d462bb; }
+  background: #ace111; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ee7781; }
+  background: #5fe61e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #523abb; }
+  background: #12b97a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a86ad9; }
+  background: #b6f169; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #adff29; }
+  background: #f6a7e9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d37d90; }
+  background: #4f1609; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #1f6569; }
+  background: #67c120; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f1803c; }
+  background: #8da7de; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f808d2; }
+  background: #187799; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2964fb; }
+  background: #2a58c6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ae677f; }
+  background: #0edc53; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #670eb6; }
+  background: #7f736b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #09a994; }
+  background: #dd1b41; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #46aae0; }
+  background: #814e1a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b063e9; }
+  background: #a631b0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3cc1ca; }
+  background: #1e071c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1f0943; }
+  background: #5ab961; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #286b9a; }
+  background: #ae9867; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9ab0a3; }
+  background: #f361d6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e70bae; }
+  background: #8858c8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d10a8f; }
+  background: #85e0fd; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b5d486; }
+  background: #eafcb5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a1694a; }
+  background: #4d4c73; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #aa4955; }
+  background: #374015; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #dcdb30; }
+  background: #5b203b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #935954; }
+  background: #5302c2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7f2ceb; }
+  background: #452b25; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #318cb5; }
+  background: #3faa27; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bf8055; }
+  background: #46cafc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a6f58d; }
+  background: #fa85ee; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6d4449; }
+  background: #0a47fa; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c430a8; }
+  background: #bea615; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f4bd22; }
+  background: #74a869; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f13927; }
+  background: #72d28f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5e896a; }
+  background: #8db116; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #dcb1ec; }
+  background: #3de9c6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3af866; }
+  background: #0e89d3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #822529; }
+  background: #a77538; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ecbb1d; }
+  background: #3d4196; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #66c30b; }
+  background: #a0d0dd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #03268c; }
+  background: #f64c4e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #72b94c; }
+  background: #a7c5ff; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8eec39; }
+  background: #fa8d1e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #961896; }
+  background: #dcdd87; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c33e7e; }
+  background: #520e3e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9f7f81; }
+  background: #4c5ed8; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #43c433; }
+  background: #e3b177; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4796f6; }
+  background: #c48552; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #433127; }
+  background: #a1ea4b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7db180; }
+  background: #04070f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e1ef53; }
+  background: #61b225; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8fee16; }
+  background: #a57445; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0819bc; }
+  background: #de6f07; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #fdda4b; }
+  background: #0d8601; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #36fe72; }
+  background: #db4712; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a8874f; }
+  background: #665b34; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #406541; }
+  background: #1219df; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6050a4; }
+  background: #818aa1; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1439ea; }
+  background: #4f57b8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #42ee84; }
+  background: #26bbab; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #45e197; }
+  background: #512156; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7f28ce; }
+  background: #56c118; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6fa587; }
+  background: #bf4d4a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f8cce7; }
+  background: #c6c127; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7c6846; }
+  background: #3b8ba1; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b20501; }
+  background: #5e7ced; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c0a1a7; }
+  background: #6544d1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d029d6; }
+  background: #696050; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e717d4; }
+  background: #2635cd; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #24adbc; }
+  background: #dbc0f1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5e5b97; }
+  background: #73262e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1b8f02; }
+  background: #08d585; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a03d46; }
+  background: #c0c6e3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c29031; }
+  background: #60ba3a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14868,7 +14868,8 @@ option {
 .default-password-modal-bottom-row {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  margin-top: 60px; }
   .default-password-modal-bottom-row .checkbox-with-text-row .label-div {
     margin-bottom: 0px; }
 
@@ -14877,10 +14878,14 @@ option {
   color: #776FFF;
   border: 1px solid #776FFF;
   margin-bottom: 25px;
-  letter-spacing: 1px; }
+  letter-spacing: 1px;
+  font-size: 14px; }
   .note-alert-mesg .alert-heading {
-    font-size: 22px;
+    font-size: 20px;
     margin-bottom: 5px; }
+
+.default-password-small-width-modal {
+  max-width: 546px !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
