--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #eb0f38; }
+  background: #f01c22; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #733649; }
+  background: #3038bd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f9a99d; }
+  background: #2382a5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #55b112; }
+  background: #ff855b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9616eb; }
+  background: #4d9d76; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6b9843; }
+  background: #027634; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #643dfa; }
+  background: #da844b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3b6b93; }
+  background: #19d608; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #fc76c6; }
+  background: #1e34e4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0c6aea; }
+  background: #58e187; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6c9e16; }
+  background: #9121b8; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5611ac; }
+  background: #5a9a31; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #16825c; }
+  background: #234c7b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #91e9b2; }
+  background: #98efb6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5fa4fb; }
+  background: #181aa1; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9fd4de; }
+  background: #499890; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b8895c; }
+  background: #dafd96; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1d7433; }
+  background: #e20cdf; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2dd742; }
+  background: #22ce02; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4f1c12; }
+  background: #9d01af; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6554c1; }
+  background: #be14e8; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5b86a6; }
+  background: #cb8b28; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9e358c; }
+  background: #2ce47d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #aaabfc; }
+  background: #f076dc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #70fe3e; }
+  background: #d60e4e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f5b8f3; }
+  background: #d5393f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ace111; }
+  background: #c6019f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5fe61e; }
+  background: #449d74; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #12b97a; }
+  background: #e3a0bd; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b6f169; }
+  background: #8e3ee7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f6a7e9; }
+  background: #9da8bb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4f1609; }
+  background: #473144; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #67c120; }
+  background: #cfa818; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8da7de; }
+  background: #59651e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #187799; }
+  background: #c118b7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2a58c6; }
+  background: #1dab73; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0edc53; }
+  background: #f5347d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #7f736b; }
+  background: #bb52f1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #dd1b41; }
+  background: #9325d1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #814e1a; }
+  background: #0bc386; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a631b0; }
+  background: #cade14; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1e071c; }
+  background: #6f7074; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5ab961; }
+  background: #f85679; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ae9867; }
+  background: #8b590f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f361d6; }
+  background: #5a1ae2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8858c8; }
+  background: #d61f79; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #85e0fd; }
+  background: #97aa69; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #eafcb5; }
+  background: #278f90; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #4d4c73; }
+  background: #f2761b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #374015; }
+  background: #1b2d4d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5b203b; }
+  background: #efefc6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5302c2; }
+  background: #c975c2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #452b25; }
+  background: #869f47; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3faa27; }
+  background: #4f1e61; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #46cafc; }
+  background: #78b435; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #fa85ee; }
+  background: #e0afe7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0a47fa; }
+  background: #67848d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bea615; }
+  background: #27e02f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #74a869; }
+  background: #aa7494; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #72d28f; }
+  background: #aa94ca; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #8db116; }
+  background: #15b48b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3de9c6; }
+  background: #9b2e77; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0e89d3; }
+  background: #75adaa; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a77538; }
+  background: #8b124e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #3d4196; }
+  background: #57a082; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a0d0dd; }
+  background: #bbed2a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f64c4e; }
+  background: #7657cf; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a7c5ff; }
+  background: #0157ac; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #fa8d1e; }
+  background: #05a87b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dcdd87; }
+  background: #c9f4e8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #520e3e; }
+  background: #1bfed1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4c5ed8; }
+  background: #268646; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e3b177; }
+  background: #4189bd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c48552; }
+  background: #819c9f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a1ea4b; }
+  background: #f8588e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #04070f; }
+  background: #9598ec; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #61b225; }
+  background: #fc8a9d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a57445; }
+  background: #148ed7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #de6f07; }
+  background: #0192f8; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0d8601; }
+  background: #61a556; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #db4712; }
+  background: #9631bc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #665b34; }
+  background: #91fb2c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1219df; }
+  background: #911d25; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #818aa1; }
+  background: #058d91; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4f57b8; }
+  background: #596c89; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #26bbab; }
+  background: #8969f0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #512156; }
+  background: #42920f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #56c118; }
+  background: #340b79; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #bf4d4a; }
+  background: #45d44a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c6c127; }
+  background: #20770e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #3b8ba1; }
+  background: #eaedad; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5e7ced; }
+  background: #85b908; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6544d1; }
+  background: #299898; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #696050; }
+  background: #b404fd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2635cd; }
+  background: #5cdc55; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #dbc0f1; }
+  background: #cd8a5c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #73262e; }
+  background: #46fcc2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #08d585; }
+  background: #909ff7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c0c6e3; }
+  background: #1771b4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #60ba3a; }
+  background: #1eed89; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14869,7 +14869,9 @@ option {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 60px; }
+  margin-top: 50px; }
+  .default-password-modal-bottom-row .checkbox-with-text-row input[type="checkbox"] {
+    margin-bottom: 0px; }
   .default-password-modal-bottom-row .checkbox-with-text-row .label-div {
     margin-bottom: 0px; }
 
@@ -15234,7 +15236,13 @@ option {
     margin-right: 0px; }
   .poclicy-center-main-warpper .conditions-select-boxs select {
     min-width: 100%;
-    margin-right: 0px; } }
+    margin-right: 0px; }
+
+  .default-password-modal-bottom-row {
+    flex-direction: column; }
+    .default-password-modal-bottom-row .default-pass-btn-div {
+      margin-top: 15px;
+      width: 100%; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
